src/test/ui/consts/const-eval/const-eval-overflow-2.stderr
error[E0080]: could not evaluate constant pattern
  --> $DIR/const-eval-overflow-2.rs:25:9
   |
LL | const NEG_NEG_128: i8 = -NEG_128;
   |                         -------- attempt to negate with overflow
...
LL |         NEG_NEG_128 => println!("A"),
   |         ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
